# StableDiffusion-Kubernetes

./: .gitignore  README.md  pyproject.toml
backend/: README.md  setup.py
backend/src/stable_diffusion_use_CAL_GRIMES/: Dockerfile  main.py  requirements.txt
backend/src/stable_diffusion_use_CAL_GRIMES/model/: stable_diffusion.py
backend/src/stable_diffusion_use_CAL_GRIMES/polling/: task.py
backend/tests/: test_main.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Navbar.jsx  Tool.jsx  UserProfile.jsx  dark_nav_with_overlap.jsx
frontend/src/pages/: Demo.jsx  Examples.jsx  Home.jsx
src/stable_diffusion_use_CAL_GRIMES/: main.py
src/stable_diffusion_use_CAL_GRIMES/model/: stable_diffusion.py
