[build-system]
requires = [
"setuptools>=61.0",
"torch>=2.2.0",
"diffusers>=0.18.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "stable_diffusion_use_CAL_GRIMES"
version = "0.0.1"
authors = [
  { name="Cal Grimes", email="cal.grimes@outlook.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"